fix: update main class, remove unused static import, update test class